<resources>
    <string name="app_name">MyTravelHCI</string>
    <string name="home_slide_first">Create your trips, travel alone or add your friends and have a good time with them!</string>
    <string name="home_slide_second">Keep track of your spending, convert values among differente currencies!</string>
    <string name="home_slide_third">Look for the best tickets, search for an accommodation and manage your reservations!</string>
    <string name="start_button">Start now</string>
    <string name="trips">Share your trip experience</string>
    <string name="money">Manage your money</string>
    <string name="tickets">Find your tickets</string>
    <string name="log_in">Log in</string>
    <string name="already_registered">Already registered?</string>
    <string name="email_signup">Sign up by email</string>
    <string name="facebook_signup">Connect by facebook</string>
    <string name="google_signup">Connect by Google</string>
    <string name="account_created">Account created!</string>
    <string name="app_main_logo">App main logo</string>
    <string name="tickets_description">Manage all your tickets</string>
    <string name="money_description">Share your money with friends</string>
    <string name="trip_description">The world of our trips</string>
    <string name="email">Email</string>
    <string name="info">Trip Info</string>
    <string name="payment">Payments</string>
    <string name="password">Password</string>
    <string-array name="currency_array">
        <item>EUR</item>
        <item>USD</item>
        <item>GBP</item>
        <item>JPY</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_registered">Not registered?</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="azzurro">Azzurro</string>
    <string name="grigio">Grigio</string>
    <string name="mytravel">MyTravel</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="my_trips">My Trips</string>
    <string name="my_profile">My Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
