<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/money_description"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/android_vertical_padding"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/money"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/android_vertical_padding"
            android:gravity="center"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/home_slide_second"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>
</ScrollView>